<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.ui.home.HomeFragment">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/header"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sub_header"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/AppName"
        app:layout_constraintTop_toBottomOf="@+id/AppName" />

    <!-- ProgressBar for Upcoming Events -->
    <ProgressBar
        android:id="@+id/progressBarUpcoming"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/subhead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/upComingHomeTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/title_upcoming"
        app:layout_constraintStart_toStartOf="@+id/AppName"
        app:layout_constraintTop_toBottomOf="@+id/progressBarUpcoming" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listUpComingHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upComingHomeTittle" />

    <!-- ProgressBar for Finished Events -->
    <ProgressBar
        android:id="@+id/progressBarFinish"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/listUpComingHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/finishedHomeTittle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/title_finished"
        app:layout_constraintStart_toStartOf="@+id/upComingHomeTittle"
        app:layout_constraintTop_toBottomOf="@+id/progressBarFinish" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listFinishedHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finishedHomeTittle" />

</androidx.constraintlayout.widget.ConstraintLayout>
